fix colours and annoying table overflow

--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ html {
 }
 body {
 	line-height: 1;
-  background: #665f56;
+  background: #7b7776
 }
 blockquote, q {
 	quotes: none;
@@ -39,6 +39,10 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+#outerTable {
+  overflow-x: auto;
+  overflow-y: clip;
 }
 
     #input {
@@ -112,7 +116,8 @@ table {
       text-transform: lowercase;
     }
     pre {
-      overflow: auto;
+      overflow-x: auto;
+      overflow-y: clip;
       margin: 5px 0 8px 0;
     }
     table {
@@ -153,7 +158,7 @@ ul, ol {
 h1 {
   padding: 10px;
   margin: 0 0 5px 0;
-  background: #207875;
+  background: #081722;
   color: #eee;
   font-size: 2.618rem;
   font-style: normal;
@@ -224,24 +229,23 @@ button:hover {
   cursor: pointer;
 }
 
-
 #content,header,footer {
 
-  max-width: 600px;
+  max-width: 615px;
   margin: 0 auto;
 }
 
 #content {
-  padding-top: 10px; padding-bottom: 5px;
+  padding-bottom: 5px;
 
 }
 section {
   margin: 0 0 10px 0;
   padding: 10px 20px 10px 20px;
-  background: #ffe4c4;
+  background: #f1f0ef;
   color: #000;
 }
-
+#ffe4c4
 fieldset {
   border: 2px ridge #aaa;
   margin-bottom: 8px;
